
  * Added option to show full screen and to hide status bar
  * Added a composer listbox to the library tab
  * You can enable to delete the recordings not bigger than a certain amount
    of time in preferences
  * Added a button to record from streams. Need to enable it from Preferences
  * If no lyric is found after showing the error that was not found restore
    the previous lyric text
  * Added option to align text in lyrics
  * Fixed mpris Pause/Play interface
  * Added lyricsplugin.com as lyrics search engine
  * Added a playcount listbox to filter in library tab
  * Added a rating listbox to filter in library tab
  * Added a year listbox to filter in library tab
  * Added File Browser. You can navigate throught your files and play them
    directly from guayadeque.
  * Now the lyrics can be saved to a directory you can configure from preferences -> lyrics
  * Changed the close buttons of the panes
  * Added search text for player playlist
  * Now allow to load from command line directories.
  * Now when loading the library if title is empty will be used the filename. 
    If album is empty will be used the dir name. 
    If Genre or Artist is empty 'Unknown' will be used.
  * Fixed Playlists. Now dynamic playlists are loaded more quickly.
  * Added in Preferences -> Playback the option to add in random mode albums 
    instead of tracks.
  * Added two buttons in preferences to order the cover words
  * The covers are now saved with the first word to detect covers
  * Added in last.fm panel the posibility to search for tracks in library
  * The splash shows the revision number
  * Double click over the track title selects the track
  * Updated the no cover image. Thanks mrmotinjo
  * Fix parsing podcasts that contains comments before the channel tag

2010-03-12 0.2.5

  * Fix set volumen on loading when was muted
  * Fix Downloading files when redirected using 'location:' in lower case